# LEGWORK

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.rst  README.md  changelog.md  environment.yml  paper.bib  paper.md  requirements.txt  setup.cfg  setup.py  zenodo.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-problem.md  feature_request.md  question.md
.github/workflows/: check_reminders.yml  create_reminders.yml  pypi_upload.yml  python-package.yml
calcs/: evol.py  lisa.py  snr.py  source.py  strain.py  utils.py  visualisation.py
calcs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
calcs/tests/: test_evol.py  test_lisa.py  test_snrs.py  test_sources.py  test_stationary.py  test_strains.py  test_utils.py
docs/: cite.rst  conf.py  demos.rst  gw.rst  gw.tests.rst  hacks.py  index.rst  install.rst  legwork.rst  legwork.tests.rst  limitations.rst  modules.rst  requirements.txt  tutorials.rst
docs/_static/: custom.css  custom.js
docs/demos/: BasicSNRCalculation.ipynb  Compare Sensitivity Curves.ipynb  CompareSensitivityCurves.ipynb  Horizon Distance Eccentric.ipynb  Horizon Distance.ipynb  HorizonDistance.ipynb  Milky Way detection rate.ipynb  SNROverTime.ipynb  The Role of Eccentricity.ipynb  TheRoleofEccentricity.ipynb  VerificationBinaries.ipynb
docs/installation/: index.rst
docs/notebooks/: Derivations.ipynb  Evolution.ipynb  Quickstart.ipynb  Source.ipynb  Strains.ipynb  Units.ipynb  Visualisation.ipynb  refs.bib
gw/: R.npy  evol.py  lisa.py  snr.py  source.py  strain.py  utils.py  visualisation.py
gw/tests/: test_evol.py  test_lisa.py  test_snrs.py  test_sources.py  test_strains.py  test_utils.py
legwork/: __init__.py  evol.py  lisa.py  psd.py  response.py  snr.py  source.py  strain.py  utils.py  verification_binaries.npy  visualisation.py
legwork/tests/: test_evol.py  test_lisa.py  test_psd.py  test_snrs.py  test_sources.py  test_strains.py  test_utils.py
