[metadata]
name = legwork
version = 0.1.0
url = https://github.com/katiebreivik/gw-calcs
author = Tom Wagg, Katie Breivik
author_email = kbreivik@flatironinstitute.org
license = MIT
license_file = LICENSE.rst
description = A python package to compute gravitational wave evolution and signal to noise ratio calculations for LISA
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
packages = find: 
install_requires = 
    numpy >= 1.16'
    scipy >= 1.5.0'
    astropy >= 4.0'
    numba >= 0.50'
    matplotlib >= 3.3.2'
    seaborn >= 0.11.1'
    schwimmbad >= 0.3.2'

[options.package_data]
* = *.npy, *.npz

[options.extras_require]
test = 
    pytest
docs = 
    sphinx
    matplotlib

[tool:pytest]
testpaths = "legwork"

[coverage:run]
omit =
    legwork/tests/*
    legwork/__init__.py
    legwork/visualisation.py
    setup.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError

