[metadata]
name = legwork
url = https://github.com/TeamLEGWORK/LEGWORK
author = Tom Wagg, Katie Breivik
author_email = tomjwagg@gmail.com
license = MIT
license_file = LICENSE.rst
description = A python package to compute gravitational wave evolution and signal to noise ratio calculations for LISA
long_description = file: README.md
long_description_content_type = text/markdown

# NOTE: any changes in the requirements must also be reflected in
#   - requirements.txt
#   - environment.yml
#   - install.rst

[options]
python_requires = >=3.11
packages = find: 
install_requires = 
    numba >= 0.58
    numpy >= 1.26
    astropy >= 6.1
    scipy >= 1.13
    matplotlib >= 3.8
    seaborn >= 0.13.2
    schwimmbad >= 0.4.2

[options.package_data]
* = *.npy, *.npz

[options.extras_require]
test = 
    pytest
docs = 
    sphinx
    matplotlib

[tool:pytest]
testpaths = "legwork"

[coverage:run]
omit =
    legwork/tests/*
    legwork/__init__.py
    legwork/visualisation.py
    setup.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError

[flake8]
max-line-length = 110